# obconf

./: .gitignore  AUTHORS  CHANGELOG  Makefile.am  README  TODO  bootstrap  configure.ac  makedeb  obconf.desktop  obconf.xml  x-openbox-theme.desktop
debian/: changelog.in  control  menu  postinst  postrm  rules
m4/: exportdynamic.m4
po/: LINGUAS  Makevars  POTFILES  POTFILES.in  ar.po  be.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  lt.po  lv.po  nl.po  no.po  obconf.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sr@latin.po  sv.po  tr.po  zh_CN.po  zh_TW.po
src/: about.c  actions.c  actions.h  appearance.c  appearance.h  archive.c  behavior.c  behavior.h  desktops.c  desktops.h  dock.c  dock.h  handlers.c  handlers.h  install.c  install.h  keybindings.c  keybindings.h  keyboard.c  keyboard.h  main.c  main.h  mouse.c  moveresize.c  obconf.glade  obconf.gladep  obconf.ui  preview.c  preview.h  preview_update.c  preview_update.h  strings.c  theme.c  theme.h  tree.c  tree.h  windows.c
